# bloom_plant_library

./: Makefile  README.md  pyproject.toml
data/: plant_facts.json  unresolved_species.json
docs/: EXPANSION_WORKFLOW.md
schemas/: plant_facts.schema.json  unresolved_species.schema.json
src/bloom_plant_library/: __init__.py  __main__.py  catalog.py
tests/: test_catalog.py
