[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloom-plant-library"
version = "0.1.0"
description = "Canonical plant catalog for Bloom apps and controller integrations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bloom_plant_library = []
